Chapter3/2.6/manifests/todoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-2-6-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-2-6
  template:
    metadata:
      labels:
        app: todoapp-2-6
    spec:
      volumes:
        - name: todoapp-2-6-vol
          persistentVolumeClaim:
            claimName: todoapp-2-6-pvc
      containers:
        - name: todoapp-2-6-cont
          image: carlossss1011/2_6_todoapp
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: todoapp-2-6-vol
              mountPath: /app/files
