Chapter3/2.6/manifests/todobackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-2-6-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todobackend-2-6
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
